Reviewed by Sam Weinig.

https://bugs.webkit.org/show_bug.cgi?id=21292

Revert the changes to enclosingIntRect made in r12530 since the new code
doesn't round correctly.


Canonical link: https://commits.webkit.org/29462@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37202 268f45cc-cd09-0410-ab3c-d52691b4dbfc